--- a/blog/2022-10-20-dgb.md
+++ b/blog/2022-10-20-dgb.md
@@ -61,11 +61,11 @@ $$
 
 For evaluation purposes, we split the timeline at a point $t_\mathrm{split}$ into all edges appearing before or after that. Therefore, we have train and test set edges ($E_\mathrm{train}$ & $E_\mathrm{test}$). In this regard, edges of a dynamic graph can be categorized as follows:
 
-1. $E_\mathrm{train} \ E_\mathrm{test}$: Edges that are only seen during training.
+1. $E_\mathrm{train} \backslash E_\mathrm{test}$: Edges that are only seen during training.
 
 2. $E_\mathrm{train} \cap E_\mathrm{test}$: Edges that are seen during training and reappear during test phase (can be considered *transductive* edges).
 
-3. $E_\mathrm{test} \ E_\mathrm{train}$: Edges that are only seen during test phase(can be considered *inductive* edges).
+3. $E_\mathrm{test}  \backslash E_\mathrm{train}$: Edges that are only seen during test phase(can be considered *inductive* edges).
 
 First, to better understand the three categories of edges above, we propose novel visualization tools for understanding edge statistics in dynamic graphs.
 
@@ -81,7 +81,7 @@ To quantitatively measure the amount of novel edges seen in a dataset, we propos
 
 $$
 \begin{equation}
-\mathrm{novelty} = \frac{1}{T} \sum_{t=1}^T \frac{|E_t \ E_t^\mathrm{seen}|}{|E_t|}
+\mathrm{novelty} = \frac{1}{T} \sum_{t=1}^T \frac{|E_t \backslash E_t^\mathrm{seen}|}{|E_t|}
 \end{equation}
 $$
 
@@ -94,7 +94,7 @@ A TET plot visualizes the reocurrence pattern of edges in different dynamic netw
 $$
 \begin{align}
 \mathrm{reocurrence} &= \frac{|E_\mathrm{train} \cap E_\mathrm{test}|}{|E_\mathrm{train}|} \\
-\mathrm{surprise} &= \frac{|E_\mathrm{test} \ E_\mathrm{train}|}{|E_\mathrm{test}|}
+\mathrm{surprise} &= \frac{|E_\mathrm{test} \backslash E_\mathrm{train}|}{|E_\mathrm{test}|}
 \end{align}
 $$
 
